Fix concept image mobile alignment and responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -563,6 +563,30 @@ section {
   }
 }
 
+/* Home: Concept Image */
+.concept-image-section {
+  width: 100%;
+  margin: 40px 0;
+}
+
+.concept-image-section .concept-container {
+  text-align: left;
+}
+
+.concept-image-section .concept-main-img {
+  width: 1200px;
+  margin-left: 30px;
+  height: auto;
+  display: block;
+}
+
+@media (max-width: 768px) {
+  .concept-image-section .concept-main-img {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
 /* Home: Services */
 .services-grid-new {
   display: grid;
